# grpc_weather_service

./: LICENSE  README.md  pyproject.toml  weather_pb2.py  weather_pb2_grpc.py
client/: main.py
protos/: weather.proto
server/: main.py
